--- a/templates/config.j2
+++ b/templates/config.j2
@@ -6,9 +6,11 @@ rules:
   braces:
     min-spaces-inside: 1
     max-spaces-inside: 1
+  brackets:
+    max-spaces-inside: 1
   document-start: disable
   empty-lines:
     max-end: 1
   line-length:
-    max: 120
+    max: 130
 
