--- a/templates/config.j2
+++ b/templates/config.j2
@@ -4,7 +4,7 @@ extends: default
 
 rules:
   braces:
-    min-spaces-inside: 1
+    # min-spaces-inside: 1
     max-spaces-inside: 1
   brackets:
     max-spaces-inside: 1
